# fastapi-custom-gpt

./: .env.example  .gitignore  README.md  auth0.action.postUserCreation.js  pyproject.toml  requirements.txt  runserver.py
auth0/actions/: postLoginAssignPermissions.js
server/: config.py  main.py  verify_token.py
