[tool.poetry]
authors = ["Francisco Caballero <fjcero@gmail.com>"]
description = ""
name = "server"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.109.0"
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
supabase = "^2.3.4"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.7"
fastapi-cors = "^0.0.6"
authlib = "^1.3.0"
fastapi-auth0 = "^0.5.0"
fastapi-sessions = "^0.3.2"
pyjwt = "^2.8.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
dev = "runserver:start"
