[tool.poetry]
authors = ["Francisco Caballero <fjcero@gmail.com>"]
description = "A boilerplate server for Custom GPT Actions"
name = "server"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.109.0"
fastapi-cors = "^0.0.6"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.1.0"
pyjwt = "^2.8.0"
python = "^3.12"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.7"
sqlalchemy = "^2.0.25"
supabase = "^2.3.4"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.poetry.scripts]
dev = "runserver:start"
