[tool.poetry]
authors = ["Francisco Caballero <fjcero@gmail.com>"]
description = "A boilerplate server for Custom GPT Actions"
name = "server"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.109.0"
fastapi-cors = "^0.0.6"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.1.0"
pyjwt = "^2.8.0"
python = "^3.12"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.7"
sqlalchemy = "^2.0.25"
supabase = "^2.3.4"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
itsdangerous = "^2.1.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.flake8]
format = "grouped"
max-complexity = 25
max-line-length = 88
show_source = true

[tool.poetry.scripts]
dev = "runserver:start"
